# VDT_project

./: .gitignore  AGENTS.md  Formulas.xlsx  README.md  index.html  package-lock.json  package.json  vercel.json
backend/: PRIVATE_DATA_SOURCE_PLAN.md  __init__.py  calculation_engine.py  data_source.py  formula_evaluator.py  formulas.py  indicators.py  main.py  models.py  pyproject.toml  requirements.txt
backend/tests/: test_calculation_engine.py
src/: main.tsx
src/app/: App.tsx  providers.tsx  styles.css
src/components/Canvas/: VdtCanvas.tsx
src/components/DecimalInput/: DecimalInput.tsx
src/components/FormulaDetails/: FormulaDetails.tsx
src/components/IndicatorNode/: IndicatorNode.tsx
src/components/SidePanel/: SidePanel.tsx
src/components/ThemeToggle/: ThemeToggle.tsx
src/components/Toolbar/: Toolbar.tsx
src/components/UserTour/: UserTour.tsx
src/data/: formulas.mock.ts  indicators.mock.ts
src/engine/: calculationEngine.test.ts  calculationEngine.ts  dependencyGraph.ts  formulaEvaluator.ts
src/services/: simulationApi.ts
src/store/: simulationStore.ts
src/themes/: theme.ts
src/types/: formula.ts  indicator.ts
src/utils/: decimalNumber.test.ts  decimalNumber.ts  formatNumber.ts  treeLayout.ts
